
	* src/gnome/glade/register.glade -- add "Edit Exchange Rate" menu
	  items to the Actions menu and the context menu
	* src/gnome/gnc-split-reg.c -- turn off Exchange Rate editing on
	  "read-only" registers
	* src/register/ledger-core/split-register-control.c -- fix the logic
	  for when we pop-up the exchange-rate dialog, in particular when the
	  user requests it.   Fixes #100285
	
2002-12-04  David Hampton  <hampton@employees.org>

	* src/quotes/finance-quote-helper.in (schemify_quote): Allow stock
	index names to be passed though from gnucash to
	Finance::Quote. Necessary but not sufficient to solve #88118.

	* src/scm/price-quotes.scm ((gnc:fq-get-quotes)): Beef up the
	error handling. Should now print a warning message if the price
	quote lookup fails, instead of crashing. #100186

2002-12-04  Derek Atkins  <derek@ihtfp.com>

	* src/register/ledger-core/split-register-p.h:
	* src/register/ledger-core/split-register.h:
	  move handle_exchange() API from -p.h to .h to export it
	  for the menus to call.

	* src/gnome/gnc-split-reg.c:  add a handler for
	  exchange-rate menu items..  Partial fix for #100285

	* README: fix references to g-wrap
	* acinclude.m4: fix g-wrap test to fail properly if it cannot
	  find g-wrap-config

	* remove src/experimental/ofx from the build system

	* src/import-export/qif-import/qif-parse.scm:
	* src/import-export/qif-io-core/qif-parse.scm:
	  deal with broken QIF files that give broken bang-fields.  In
	  particular, handle the case where it supplies "!Type Bank"
	  instead of "!Type:Bank"
	
2002-12-03  Derek Atkins  <derek@ihtfp.com>

	* src/register/ledger-core/split-register-control.c:
	  export the 'handle_exchange()' interface
	* src/register/ledger-core/split-register-p.h:
	  add the 'handle_exchange()' prototype
	* src/register/ledger-core/split-register.c:
	  call handle_exchange() from the save() function to make sure we
	  have an exchange rate if the user hits "Enter" instead of